# ufile-csdk

./: .gitignore  CMakeLists.txt  README  README.md
examples/: CMakeLists.txt  async_mput.c  bucket.c  bucket_create.c  bucket_delete.c  config.json.example  delete.c  dns_test.c  download.c  file.c  file_async_download.c  file_async_mput.c  file_delete.c  file_download.c  file_download_piece.c  file_head_file.c  file_mput.c  file_put_buf.c  file_put_file.c  head_file.c  helper.h  mput.c  multi_bucket_op.c  put.c  thpool.c
lib/: CMakeLists.txt  api.c  api.h  auth.c  auth.h  bucket.c  encoding.c  encoding.h  http.c  http.h  string_util.c  string_util.h  types.h  ufile_delete.c  ufile_download.c  ufile_head.c  ufile_mput.c  ufile_put.c
v1/demo/: Makefile  main.c  ufilesdk.conf
v1/ucloud/: Makefile  api.h  base64.c  base64.h  common.c  common.h  config.c  config.h  delete.c  digest.c  digest.h  download.c  error.c  error.h  global_resource.c  hmac_sha1.c  hmac_sha1.h  http.c  http.h  json_util.c  json_util.h  mimetype.h  mput.c  string_util.c  string_util.h
