#设置CMAKE最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

if (${APPLE})  #防止 mac rpath 问题。
    set(CMAKE_MACOSX_RPATH 1)
endif()

SET(PROJECT_NAME ucloud_ufile)
PROJECT(${PROJECT_NAME})


set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")

AUX_SOURCE_DIRECTORY(./ DIR_SRCS_UFILE)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${DIR_SRCS_UFILE})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} -lcurl)